--- a/src/styles.css
+++ b/src/styles.css
@@ -72,7 +72,6 @@ nav {
 
 body {
   font-family: "Poppins", sans-serif;
-  font-display: swap;
   background: black;
   line-height: 1.8;
   color: var(--grey);
